<resources>
    <string name="app_name">Peduli Pasal</string>
    <string name="welcome">Welcome to Peduli Pasal</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_app_text">Peduli pasal adalah aplikasi ChatBot pintar yang dapat mengetahui pasal yang sesuai dengan kejahatan atau tindak pidana yang kamu berikan</string>
    <string name="login_page_text">Masukkan email dan password atau login menggunakan Google</string>
    <string name="email_warning">Format email invalid</string>
    <string name="email">Email</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="signup">Sign up</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="name">Nama</string>
    <string name="signup_page_text">Masukkan data yang diperlukan</string>
    <string name="name_hint">nama</string>
    <string name="profile">Profil</string>
    <string name="logout">Logout</string>
    <string name="user_email">c14220311@john.petra.ac.id</string>
    <string name="user_name">Satriya Wibowo</string>
    <string name="news">News</string>
    <string name="news_api_errror">Error dalam mengambil data berita</string>
    <string name="dark_mode">Pengaturan tema</string>
    <string name="enable_dark_mode">Pilih tema sesuai kriteria anda</string>
    <string name="daily_reminder">Daily news</string>
    <string name="enable_notifications">Nyalakan notifikasi untuk berita harian</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="please_input_new_chat_topic">Masukkan topic chat baru</string>
    <string name="save">Simpan</string>
    <string name="empty_topic_warning">Topic chat tidak boleh kosong</string>
    <string name="add_new_chat">Add new chat</string>
    <string name="create">Buat</string>
    <string name="cancel">Batalkan</string>
    <string name="delete">Delete</string>
    <string name="type_your_message">ketik pesan anda disini</string>
    <string name="send">Send</string>
    <string name="empty_message_warning">There is no message</string>
    <string name="success_title_login">Berhasil</string>
    <string name="success_login_message">Selamat anda berhasil login ke akun anda</string>
    <string name="positive_reply">Lanjutkan</string>
    <string name="failed_title_login">Gagal</string>
    <string name="failed_login_message">Gagal masuk ke akun</string>
    <string name="negative_reply">Kembali</string>
    <string name="success_title_signup">Berhasil</string>
    <string name="success_signup_message">Akun berhasil dibuat</string>
    <string name="failed_title_signup">Gagal</string>
    <string name="failed_signup_message">Akun gagal dibuat</string>
    <string name="delete_chat">Hapus chat</string>
    <string name="delete_chat_confirmation">Apakah anda ingin menghapus chat ini?</string>
    <string name="confirm">Ya</string>
    <string name="your_web_client_id">808921460677-uaj5f7j5egie3eh2ii6r9c94pf7pbfp7.apps.googleusercontent.com</string>
    <string name="profile_image">profile image</string>
    <string name="example_suggestion">Kapan Undang Undang KUHP di sah kan?</string>
    <string name="offline_message">Anda sedang offline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_quiz">Quiz</string>
    <string name="select_level">Select level</string>
    <string name="score">Nilai</string>
    <string name="reset">Reset</string>
    <string name="easy">Easy</string>
    <string name="ask_gemini">Ask Gemini</string>
    <string name="recent_chats">Recent chats</string>
    <string name="edit">Edit</string>
    <string name="recent_news">Recent news</string>
    <string name="registered_email">Registered email</string>
    <string name="registered_name">Registered name</string>
    <string name="try_again">Coba lagi</string>
    <string name="empty_chat">Belum pernah chat yah? buat chat baru</string>
    <string name="delete_chat_failed">Gagal menghapus chat</string>
    <string name="login_button_transition_name">login_button_transition</string>
    <string-array name="levels">
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string name="morning">Selamat pagi,</string>
    <string name="afternoon">Selamat siang,</string>
    <string name="night">Selamat malam,</string>
    <string name="share">Share</string>

</resources>