<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_settings"
        android:textSize="56sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_primary"/>

    <TextView
        android:id="@+id/tvDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        android:layout_marginTop="40dp"
        android:text="@string/dark_mode"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvEnableDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDarkMode"
        app:layout_constraintTop_toBottomOf="@+id/tvDarkMode" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEnableDarkMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDarkMode" />

    <TextView
        android:id="@+id/tvDailyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEnableDarkMode"
        android:layout_marginTop="16dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvEnableNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        app:layout_constraintStart_toStartOf="@+id/tvDailyReminder"
        app:layout_constraintTop_toBottomOf="@+id/tvDailyReminder"
        android:textSize="16sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEnableNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDailyReminder" />

    <TextView
        android:id="@+id/tvRegisteredEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEnableNotifications"
        android:layout_marginTop="16dp"
        android:text="@string/registered_email"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvRegisteredEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisteredEmail"
        android:textSize="16sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvRegisteredName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSettingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:layout_marginTop="16dp"
        android:text="@string/registered_name"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvRegisteredName"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisteredName"
        android:textSize="16sp"
        android:textStyle="italic"/>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="128dp"
        android:text="@string/logout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>