<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.quiz.QuizFragment"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_quiz"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSelectLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_level"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuiz"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectLevel">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteLevelMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/easy"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        android:gravity="start"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/tvScoreValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"/>

    <TextView
        android:id="@+id/tvScoreValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/tvScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvScore"
        app:layout_constraintTop_toTopOf="@+id/tvScore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQuizQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/tvScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        tools:listitem="@layout/item_question"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset"
        android:layout_marginBottom="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>